--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     (top of the page i.e. navigation bar and extras, is the same for all pages, therefore no reason to copy & paste it)
     <script>
         $(function () {
-            $("#top-placeholder").load("templates/top.html");
+            $("#top-placeholder").load("templates_data/top.html");
         });
     </script>
     -->
