--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/about.css">
+    <!-- Load Font Awesome (for usage of icons & emojis) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Load BOOTSTRAP CSS & JS (including jQuery) from CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -24,59 +26,44 @@
     <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 </head>
 <body>
-<div id="top-placeholder">
-    <!-- Placeholder div to be populated with HTML from top.html
-    (top of the page i.e. navigation bar and extras, is the same for all pages, therefore no reason to copy & paste it)
-    <script>
-        $(function () {
-            $("#top-placeholder").load("templates_data/top.html");
-        });
-    </script>
-    -->
-    <div id="top" class="container-fluid no-padding">
-        <div class="row top-section">
-            <!-- Data Engineering Daily Logo Box -->
-            <div class="col-3">
-                <a href="index.html">
-                    <img id="data-engineering-daily-logo" src="img/logo.png"
-                         alt="The Data Engineering Daily Website Logo">
-                </a>
-            </div>
-            <!-- Navigation Bar -->
-            <div class="col-6">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <div class="row">
+
+<section id="top" class="container-fluid no-padding" style="background-image: url('img/background-cropped.jpg');">
+    <div class="row top-section">
+        <!-- Data Engineering Daily Logo Box -->
+        <div class="col-3 d-flex align-items-center justify-content-center">
+            <a href="index.html">
+                <img id="data-engineering-daily-logo" src="img/logo.png"
+                     alt="The Data Engineering Daily Website Logo">
+            </a>
+        </div>
+        <!-- Navigation Bar -->
+        <div class="col-6 d-flex align-items-center justify-content-center">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div id="navbar-buttons" class="row">
+                    <script id="navbar-buttons-handlebars-template" type="text/x-handlebars-template">
+                        {{#each buttons}}
                         <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="about.html"><span>About </span></a>
+                            <a class="nav-link nav-button" href="{{button-link}}"><span>{{text}} </span></a>
                         </div>
-                        <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="news.html"><span>News </span></a>
-                        </div>
-                        <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="events.html"><span>Events </span></a>
-                        </div>
-                        <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="guides.html"><span>Guides & Tutorials </span></a>
-                        </div>
-                    </div>
-                </nav>
-            </div>
-            <!-- Subscription, Time and Search -->
-            <div class="col-3">
-                <button>Subscribe to our daily digest!</button>
-                <div id="date-and-time-div" class="current-date-and-time">
-                    <span id="current-date"></span>
-                    <span id="current-time"></span>
+                        {{/each}}
+                    </script>
                 </div>
+            </nav>
+        </div>
+        <!-- Subscription, Time and Search -->
+        <div class="col-3 d-flex align-items-center justify-content-center">
+            <div id="date-and-time-div" class="current-date-and-time">
+                <span id="current-date"></span>
+                <span id="current-time"></span>
             </div>
         </div>
     </div>
-</div>
+</section>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-8 offset-2">
-            <div class="info-box">
+            <div id="about-background" class="info-box">
                 <div style="text-align: center;"><h1>Background</h1></div>
                 <hr>
                 <p>
@@ -120,7 +107,7 @@
                     <strong>
                         (One could get acquainted at his/her discretion with such technologies by exploring our
                         <wbr>
-                        Guides & Tutorials section)
+                        <a href="guides.html">Guides & Tutorials</a> section)
                     </strong>
                 </p>
             </div>
@@ -142,68 +129,67 @@
             <div class="info-box">
                 <div style="text-align: center;"><h1>Get in touch with us</h1></div>
                 <section class="mb-4">
-                    <h4>
-                        For any questions
+                    <h4 style="margin: 2rem;">
+                        Should you have any questions / complaints / suggestions, do reach out and let us know!
                     </h4>
-
                     <div class="row">
                         <div class="col-md-9 mb-md-0 mb-5">
-                            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                            <form id="contact-form" name="contact-form">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-3">
                                         <div class="md-form mb-0">
-                                            <input type="text" id="name" name="name" class="form-control">
-                                            <label for="name" class="">Your name</label>
+                                            <input type="text" id="first-name" name="first-name" class="form-control">
+                                            <label for="first-name" class="">First Name</label>
                                         </div>
                                     </div>
-
+                                    <div class="col-md-3">
+                                        <div class="md-form mb-0">
+                                            <input type="text" id="last-name" name="last-name" class="form-control">
+                                            <label for="last-name" class="">Last Name</label>
+                                        </div>
+                                    </div>
                                     <div class="col-md-6">
                                         <div class="md-form mb-0">
                                             <input type="text" id="email" name="email" class="form-control">
-                                            <label for="email" class="">Your email</label>
+                                            <label for="email" class="">Email</label>
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="md-form mb-0">
-                                            <input type="text" id="subject" name="subject" class="form-control">
-                                            <label for="subject" class="">Subject</label>
+                                            <input type="text" id="subject-title" name="subject-title" class="form-control">
+                                            <label for="subject-title" class="">Subject / Title</label>
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <div class="col-md-12">
-
                                         <div class="md-form">
-                                            <textarea type="text" id="message" name="message" rows="2"
+                                            <textarea type="text" id="message-content" name="message-content" rows="8"
                                                       class="form-control md-textarea"></textarea>
-                                            <label for="message">Your message</label>
+                                            <label for="message-content">Message Content</label>
                                         </div>
-
                                     </div>
                                 </div>
                             </form>
-
                             <div class="text-center text-md-left">
-                                <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
+                                <a class="btn btn-primary" href="javascript:void(0)">Send</a>
                             </div>
                             <div class="status"></div>
                         </div>
 
                         <div class="col-md-3 text-center">
                             <ul class="list-unstyled mb-0">
-                                <li><i class="fas fa-map-marker-alt fa-2x"></i>
+                                <li><i class="fa fa-map-marker-alt fa-2x"></i>
                                     <p>San Francisco, CA 94126, USA</p>
                                 </li>
 
-                                <li><i class="fas fa-phone mt-4 fa-2x"></i>
+                                <li><i class="fa fa-phone mt-4 fa-2x"></i>
                                     <p>+ 01 234 567 89</p>
                                 </li>
 
-                                <li><i class="fas fa-envelope mt-4 fa-2x"></i>
+                                <li><i class="fa fa-envelope mt-4 fa-2x"></i>
                                     <p>contact@mdbootstrap.com</p>
                                 </li>
                             </ul>
@@ -214,5 +200,9 @@
         </div>
     </div>
 </div>
+<script src="js/vendor/modernizr-3.11.2.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
+<script src="js/about.js"></script>
 </body>
 </html>
