--- a/about.html
+++ b/about.html
@@ -158,7 +158,8 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="md-form mb-0">
-                                            <input type="text" id="subject-title" name="subject-title" class="form-control">
+                                            <input type="text" id="subject-title" name="subject-title"
+                                                   class="form-control">
                                             <label for="subject-title" class="">Subject / Title</label>
                                         </div>
                                     </div>
@@ -166,7 +167,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="md-form">
-                                            <textarea type="text" id="message-content" name="message-content" rows="8"
+                                            <textarea type="text" id="message-content" name="message-content" rows="6"
                                                       class="form-control md-textarea"></textarea>
                                             <label for="message-content">Message Content</label>
                                         </div>
@@ -174,7 +175,10 @@
                                 </div>
                             </form>
                             <div class="text-center text-md-left">
-                                <a class="btn btn-primary" href="javascript:void(0)">Send</a>
+                                <a class="btn btn-primary"
+                                   onclick="sendMessage()">
+                                    Send
+                                </a>
                             </div>
                             <div class="status"></div>
                         </div>
@@ -182,7 +186,7 @@
                         <div class="col-md-3 text-center">
                             <ul class="list-unstyled mb-0">
                                 <li><i class="fa fa-map-marker-alt fa-2x"></i>
-                                    <p>San Francisco, CA 94126, USA</p>
+                                    <p>London WC1E 7HU, UK</p>
                                 </li>
 
                                 <li><i class="fa fa-phone mt-4 fa-2x"></i>
@@ -190,7 +194,7 @@
                                 </li>
 
                                 <li><i class="fa fa-envelope mt-4 fa-2x"></i>
-                                    <p>contact@mdbootstrap.com</p>
+                                    <p>contact@data-eng-daily.com</p>
                                 </li>
                             </ul>
                         </div>
