--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
     <div class="row">
         <div class="col-12 rss-feed-box">
             <marquee behavior="scroll" scrollamount="10" direction="right" width="100%">
-                <span>
-                    test
+                <span id="rss-feed-content">
+                    <script id="rss-feed-handlebars-template" type="text/x-handlebars-template">
+                        {{newsFeed}}
+                    </script>
                 </span>
             </marquee>
         </div>
