--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 <div class="container-fluid no-padding">
     <div class="row">
         <div class="col-12 rss-feed-box">
-            <marquee behavior="scroll" scrollamount="10" direction="right" width="100%">
+            <marquee behavior="scroll" scrollamount="5" direction="left" width="100%">
                 <span id="rss-feed-content">
                     <script id="rss-feed-handlebars-template" type="text/x-handlebars-template">
-                        {{newsFeed}}
+                        {{{newsFeed}}}
                     </script>
                 </span>
             </marquee>
@@ -222,6 +222,40 @@
             </button>
         </div>
     </section>
+</div>
+<div class="login">
+    <h2>Modal Login Form</h2>
+
+    <button onclick="document.getElementById('login').style.display='block'" style="width:auto;">Login</button>
+
+    <div id="login" class="modal">
+
+        <form class="modal-content animate">
+            <div class="imgcontainer">
+                <span onclick="document.getElementById('login').style.display='none'" class="close" title="Close Modal">&times;</span>
+            </div>
+
+            <div class="container">
+                <label for="uname"><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" id="uname" name="uname" required>
+
+                <label for="psw"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" id="psw" name="psw" required>
+
+                <button type="submit">Login</button>
+                <label>
+                    <input type="checkbox" checked="checked" name="remember"> Remember me
+                </label>
+            </div>
+
+            <div class="container" style="background-color:#f1f1f1">
+                <button type="button" onclick="document.getElementById('login').style.display='none'" class="cancelbtn">
+                    Cancel
+                </button>
+                <span class="psw">Forgot <a href="#">password?</a></span>
+            </div>
+        </form>
+    </div>
 </div>
 <footer>
     <button>Subscribe to our daily digest!</button>
