--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     <script id="navbar-buttons-handlebars-template" type="text/x-handlebars-template">
                         {{#each buttons}}
                         <div class="col nav-button-div">
-                            <a class="nav-link nav-button" href="{{button-link}}"><span>{{text}} </span></a>
+                            <a class="nav-link nav-button" href="{{button-link}}" onClick="{{button-onclick}}">
+                                <span>{{text}} </span>
+                            </a>
                         </div>
                         {{/each}}
                     </script>
@@ -93,7 +95,7 @@
                         {{#each news}}
                         <li class="top-news">
                         <span class="bullet-data">
-                            <a href="#">{{{this}}}</a>
+                            <a href="#" onClick="{{news-onclick}}">{{{this}}}</a>
                         </span>
                         </li>
                         {{/each}}
@@ -110,7 +112,7 @@
                         {{#each discussions}}
                         <li class="hot-discussions">
                         <span class="bullet-data">
-                            <a href="#">{{{this}}}</a>
+                            <a href="#" onClick="document.getElementById('login').style.display='block'">{{{this}}}</a>
                         </span>
                         </li>
                         {{/each}}
@@ -224,30 +226,29 @@
     </section>
 </div>
 <div class="login">
-    <h2>Modal Login Form</h2>
-
-    <button onclick="document.getElementById('login').style.display='block'" style="width:auto;">Login</button>
-
     <div id="login" class="modal">
-
         <form class="modal-content animate">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('login').style.display='none'" class="close" title="Close Modal">&times;</span>
             </div>
-
             <div class="container">
+                <h2 style="margin-top: 1rem; margin-bottom: 2rem;">
+                    Only site members can access Blog & Forum content!
+                </h2>
+                <h5 style="margin-top: 1rem; margin-bottom: 2rem;">
+                    For registration details, please email us at
+                    <a href="mailto:contact@data-eng-daily.com">contact@data-eng-daily.com</a> or use the
+                    <a href="about.html#contact-form">Contact Form in our About page.</a>
+                </h5>
                 <label for="uname"><b>Username</b></label>
                 <input type="text" placeholder="Enter Username" id="uname" name="uname" required>
-
                 <label for="psw"><b>Password</b></label>
                 <input type="password" placeholder="Enter Password" id="psw" name="psw" required>
-
                 <button type="submit">Login</button>
                 <label>
                     <input type="checkbox" checked="checked" name="remember"> Remember me
                 </label>
             </div>
-
             <div class="container" style="background-color:#f1f1f1">
                 <button type="button" onclick="document.getElementById('login').style.display='none'" class="cancelbtn">
                     Cancel
