--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         {{#each news}}
                         <li class="top-news">
                         <span class="bullet-data">
-                            <a href="#" onClick="{{news-onclick}}">{{{this}}}</a>
+                            <a href="#" onClick="{{news-onclick}}">{{{news-text}}}</a>
                         </span>
                         </li>
                         {{/each}}
