--- a/news.html
+++ b/news.html
@@ -99,10 +99,12 @@
     <div id="news-buttons" class="row">
         <script id="news-buttons-handlebars-template" type="text/x-handlebars-template">
             {{#each newsButtons}}
-            <div class="col-4 d-flex align-items-center justify-content-center">
-                <button id="{{button-id}}" type="button" class="btn btn-primary btn-lg btn-block"
+            <div class="col-4 offset-1 d-flex align-items-center justify-content-center news-button">
+                <button id="{{button-id}}" type="button" class="btn {{button-class}} btn-lg btn-block"
+                        style="border-radius: 1rem;"
                         data-toggle="modal" data-target="#{{target-modal}}">
-                    {{{button-text}}}
+                    <img class="news-button" src="img/news/{{button-image}}" width="400px" height="200px">
+                    <h3><strong>{{{button-text}}}</strong></h3>
                 </button>
             </div>
             {{/each}}
