--- a/news.html
+++ b/news.html
@@ -95,7 +95,7 @@
     </div>
 </section>
 
-<section class="container-fluid no-padding">
+<section class="container-fluid no-padding" style="margin-bottom: 5rem;">
     <div id="news-buttons" class="row">
         <script id="news-buttons-handlebars-template" type="text/x-handlebars-template">
             {{#each newsButtons}}
@@ -136,6 +136,23 @@
         </script>
     </div>
 </section>
+<footer>
+    <div class="row">
+        <div class="col-10 offset-1">
+            <span style="margin-left: 2rem; margin-right: 2rem;">© 2021 Data Engineering Daily</span>
+            <button class="btn btn-info btn-lg" style="padding: 1rem; margin-left: 2rem; margin-right: 2rem;">Subscribe
+                to our daily digest!
+            </button>
+            <span id="social_media_icons" style="margin-left: 2rem; margin-right: 2rem;">
+                <a href="http://facebook.com/data-engineering-daily" class="fa fa-facebook social-media-button"></a>
+                <a href="http://twitter.com/data-engineering-daily" class="fa fa-twitter social-media-button"></a>
+                <a href="http://instagram.com/data-engineering-daily" class="fa fa-instagram social-media-button"></a>
+                <a href="http://youtube.com/data-engineering-daily" class="fa fa-youtube social-media-button"></a>
+                <a href="http://linkedin.com/data-engineering-daily" class="fa fa-linkedin social-media-button"></a>
+            </span>
+        </div>
+    </div>
+</footer>
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
