--- a/quizzes.html
+++ b/quizzes.html
@@ -137,7 +137,7 @@
                                         <input type="radio" id="{{../../modal-id}}_q{{@../index}}_a{{@index}}"
                                                name="{{../../modal-id}}_q{{@../index}}"
                                                value="{{#if this.[1]}}1{{else}}0{{/if}}">
-                                        <label for="{{../../modal-id}}_q{{@../index}}_a{{@index}}">{{this.[0]}}</label><br>
+                                        <label for="{{../../modal-id}}_q{{@../index}}_a{{@index}}">{{{this.[0]}}}</label><br>
                                         {{/each}}
                                     </li>
                                     {{/each}}
