--- a/news.html
+++ b/news.html
@@ -102,7 +102,7 @@
             <div class="col-4 offset-1 d-flex align-items-center justify-content-center news-button">
                 <button id="{{button-id}}" type="button" class="btn {{button-class}} btn-lg btn-block"
                         style="border-radius: 1rem;"
-                        data-toggle="modal" data-target="#{{target-modal}}">
+                        data-toggle="modal" data-target="#{{target-modal}}" onClick="{{button-onclick}}">
                     <img class="news-button" src="img/news/{{button-image}}" width="400px" height="200px">
                     <h3><strong>{{{button-text}}}</strong></h3>
                 </button>
