--- a/index.html
+++ b/index.html
@@ -97,7 +97,45 @@
             </form>
         </div>
     </div>
+    <div class="modal fade" id="subscription-modal">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Data Engineering Daily Newsletter Subscription</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="newsletter-subscription">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="subscription-content">
+                                        <h1>Subscribe to Data Engineering Daily Digest</h1>
+                                        <div class="row">
+                                            <div class="col-6 offset-3 d-flex align-items-center justify-content-center">
+                                                <div class="input-group">
+                                                    <input type="email" class="form-control"
+                                                           placeholder="Enter your email">
+                                                    <span class="input-group-btn">
+                                                <button class="btn btn-theme" type="submit">Subscribe</button>
+                                            </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
+
 <div class="container-fluid no-padding">
     <div class="row">
         <div class="col-12 rss-feed-box">
@@ -260,12 +298,14 @@
         </div>
     </section>
 </div>
+
 <footer>
     <div class="row">
         <div class="col-10 offset-1">
             <span style="margin-left: 2rem; margin-right: 2rem;">© 2021 Data Engineering Daily</span>
-            <button class="btn btn-info btn-lg" style="padding: 1rem; margin-left: 2rem; margin-right: 2rem;">Subscribe
-                to our daily digest!
+            <button class="btn btn-info btn-lg" style="padding: 1rem; margin-left: 2rem; margin-right: 2rem;"
+                    data-toggle="modal" data-target="#subscription-modal">
+                Subscribe to our daily digest!
             </button>
             <span id="social_media_icons" style="margin-left: 2rem; margin-right: 2rem;">
                 <a href="http://facebook.com/data-engineering-daily" class="fa fa-facebook social-media-button"></a>
@@ -277,6 +317,7 @@
         </div>
     </div>
 </footer>
+
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
