--- a/news.html
+++ b/news.html
@@ -93,6 +93,43 @@
             </form>
         </div>
     </div>
+    <div class="modal fade" id="subscription-modal">
+        <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Data Engineering Daily Newsletter Subscription</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="newsletter-subscription">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="subscription-content">
+                                        <h1>Subscribe to Data Engineering Daily Digest</h1>
+                                        <div class="row">
+                                            <div class="col-6 offset-3 d-flex align-items-center justify-content-center">
+                                                <div class="input-group">
+                                                    <input type="email" class="form-control"
+                                                           placeholder="Enter your email">
+                                                    <span class="input-group-btn">
+                                                <button class="btn btn-theme" type="submit">Subscribe</button>
+                                            </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 <section class="container-fluid no-padding" style="margin-bottom: 5rem;">
