--- a/about.html
+++ b/about.html
@@ -281,8 +281,9 @@
     <div class="row">
         <div class="col-10 offset-1">
             <span style="margin-left: 2rem; margin-right: 2rem;">© 2021 Data Engineering Daily</span>
-            <button class="btn btn-info btn-lg" style="padding: 1rem; margin-left: 2rem; margin-right: 2rem;">Subscribe
-                to our daily digest!
+            <button class="btn btn-info btn-lg" style="padding: 1rem; margin-left: 2rem; margin-right: 2rem;"
+                    data-toggle="modal" data-target="#subscription-modal">
+                Subscribe to our daily digest!
             </button>
             <span id="social_media_icons" style="margin-left: 2rem; margin-right: 2rem;">
                 <a href="http://facebook.com/data-engineering-daily" class="fa fa-facebook social-media-button"></a>
