--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
 </head>
 <body>
 
+<!-- Shared top section - Navigation bar, hidden login/subscription modals etc. -->
 <section id="top" class="container-fluid no-padding" style="background-image: url('img/background-cropped.jpg');">
     <div class="row top-section">
         <!-- Data Engineering Daily Logo Box -->
@@ -52,7 +53,7 @@
                 </div>
             </nav>
         </div>
-        <!-- Subscription, Time and Search -->
+        <!-- Current Date and Time box -->
         <div class="col-3 d-flex align-items-center justify-content-center">
             <div id="date-and-time-div" class="current-date-and-time">
                 <span id="current-date"></span>
@@ -60,6 +61,7 @@
             </div>
         </div>
     </div>
+    <!-- Login modal (hidden by default, opens only when "member content" is clicked -->
     <div class="login">
         <div id="login" class="modal">
             <form class="modal-content animate">
@@ -95,6 +97,7 @@
             </form>
         </div>
     </div>
+    <!-- Subscription modal (hidden by default, opens only when "Subscribe to us" button at footer is clicked -->
     <div class="modal fade" id="subscription-modal">
         <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
@@ -134,7 +137,10 @@
     </div>
 </section>
 
+<!-- Main non-shared content begins here -->
+
 <div class="container-fluid">
+    <!-- "About Us" "Background" Info box with background information about the site -->
     <div class="row">
         <div class="col-8 offset-2">
             <div id="about-background" class="info-box">
@@ -187,6 +193,7 @@
             </div>
         </div>
     </div>
+    <!-- "Awards and acclaims" box, displaying the awards obtained by the website -->
     <div class="row">
         <div class="col-8 offset-2">
             <div class="info-box">
@@ -198,6 +205,7 @@
             </div>
         </div>
     </div>
+    <!-- "Get in touch" contact form area -->
     <div class="row">
         <div class="col-8 offset-2" style="margin-bottom: 5rem;">
             <div class="info-box">
@@ -277,6 +285,8 @@
         </div>
     </div>
 </div>
+
+<!-- Shared footer section - Copyright statement, "Subscripe to us" button and Social Media links -->
 <footer>
     <div class="row">
         <div class="col-10 offset-1">
@@ -295,6 +305,8 @@
         </div>
     </div>
 </footer>
+
+<!-- Finally, load all relevant JavaScript -->
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
