--- a/guides.html
+++ b/guides.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/news.css">
+    <link rel="stylesheet" href="css/guides.css">
     <!-- Load BOOTSTRAP CSS & JS (including jQuery) from CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -135,6 +135,19 @@
     </div>
 </section>
 
+<div id="main-content-guides-tutorials">
+    <div class="row">
+        <div class="col-8 offset-2 d-flex align-items-center justify-content-center">
+            <h1 class="floating" style="margin: 5rem;">Coming Soon!</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6 offset-3 d-flex align-items-center justify-content-center">
+            <img src="img/under-construction.png"
+                 style="margin-bottom: 10rem; border-radius: 5rem; border: 1rem solid transparent;">
+        </div>
+    </div>
+</div>
 <!-- Shared footer section - Copyright statement, "Subscripe to us" button and Social Media links -->
 <footer>
     <div class="row">
