--- a/guides.html
+++ b/guides.html
@@ -144,7 +144,8 @@
     <div class="row">
         <div class="col-6 offset-3 d-flex align-items-center justify-content-center">
             <img src="img/under-construction.png"
-                 style="margin-bottom: 10rem; border-radius: 5rem; border: 1rem solid transparent;">
+                 style="margin-bottom: 10rem; border-radius: 5rem; border: 1rem solid transparent;"
+                 alt="The Guides and Tutorials page is currently under construction - Expect content soon!">
         </div>
     </div>
 </div>
