--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
                             <div class="vr"></div>
                             <div>
                                 <a href="news.html#news.html#{{news-link}}">
-                                    <img src="img/news/{{image}}" alt="" height="330px" width="600px">
+                                    <img src="img/news/{{image}}"
+                                         alt="An Image corresponding to the news item displayed"
+                                         height="330px" width="600px">
                                 </a>
                             </div>
                         </div>
@@ -299,7 +301,8 @@
                     <div class="slideitem">
                         <div class="col d-flex align-items-center justify-content-center">
                             <a href="{{event-link}}">
-                                <img class="slideitem-events" src="img/events/{{image}}" height="450px" width="800px">
+                                <img class="slideitem-events" src="img/events/{{image}}" height="450px" width="800px"
+                                     alt="An Image corresponding to the event displayed">
                             </a>
                         </div>
                     </div>
